.solutions/.4/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: validate
  name: validate
spec:
  ports:
  - name: 443-8443
    port: 443
    protocol: TCP
    targetPort: 8443
  selector:
    app: validate
  type: ClusterIP
status:
  loadBalancer: {}
