.solutions/.4/admissionconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  namespace: ac-workshop
  name: validating-webhook
webhooks:
  - name: validate.ac-workshop.svc
    failurePolicy: Fail
    sideEffects: None
    timeoutSeconds: 30
    admissionReviewVersions: ["v1","v1beta1"]
    namespaceSelector:
      matchExpressions:
      - key: ac-workshop.ignore
        operator: DoesNotExist    
    rules:
      - apiGroups: ["*"]
        resources:
          - "deployments"
          - "pods"
          - "replicasets"
        apiVersions:
          - "*"
        operations:
          - CREATE
          - UPDATE
    clientConfig:
      service:
        name: validate 
        namespace: ac-workshop
        path: /validate/
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ0akNDQXNxZ0F3SUJBZ0lKQUxLZFcyYmE1dTFLTUEwR0NTcUdTSWIzRFFFQkN3VUFNSUdiTVFzd0NRWUQKVlFRR0V3SlZVekVUTUJFR0ExVUVDQXdLVjJGemFHbHVaM1J2YmpFUU1BNEdBMVVFQnd3SFUyVmhkSFJzWlRFTgpNQXNHQTFVRUNnd0VRMDVEUmpFU01CQUdBMVVFQ3d3SlUyVmpkWEpsUTI5dU1TRXdId1lEVlFRRERCaDJZV3hwClpHRjBaUzVoWXkxM2IzSnJjMmh2Y0M1emRtTXhIekFkQmdrcWhraUc5dzBCQ1FFV0VIUmxiWEJBYm05MGFHbHUKWnk1amIyMHdIaGNOTWpNd01URTRNakV3TWpBNVdoY05NalV4TVRBM01qRXdNakE1V2pDQm16RUxNQWtHQTFVRQpCaE1DVlZNeEV6 [...]
